# rust_image_scan

./: Cargo.toml  README.md  main.rb
src/: colors.rs  lib.rs  main.rs  ocr.rs  pretreatment.rs  treatment.rs
src/pretreatment/: morphology.rs  threshold.rs
src/treatment/: contours.rs  tilt.rs  trapezoid.rs
