[package]
name = "rust_image_scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ang = "0.5.0"
ferris-says = "0.2"
serde_json = "1.0"
opencv = { version = "0.53.1", features =["clang-runtime"]}
lambda_runtime = "0.7.0"
